--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@
 
 :root {
   --background: hsl(271 41% 10%);
-  --foreground: hsl(20, 14.3%, 4.1%);
+  --foreground: hsl(271 41% 10%);
   --muted: hsl(60, 4.8%, 95.9%);
   --muted-foreground: hsl(25, 5.3%, 44.7%);
   --popover: hsl(0, 0%, 100%);
@@ -19,8 +19,8 @@
   --secondary-foreground: hsl(24, 9.8%, 10%);
   --accent: hsl(60, 4.8%, 95.9%);
   --accent-foreground: hsl(24, 9.8%, 10%);
-  --destructive: hsl(0, 84.2%, 60.2%);
-  --destructive-foreground: hsl(60, 9.1%, 97.8%);
+  --destructive: hsl(271 41% 10%);
+  --destructive-foreground: hsl(271 41% 10%);
   --ring: hsl(20, 14.3%, 4.1%);
   --radius: 0.5rem;
   
