--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@
 :root {
   --background: hsl(271 41% 10%);
   --foreground: hsl(271 41% 10%);
-  --muted: hsl(60, 4.8%, 95.9%);
+  --muted: hsl(271 41% 10%);
   --muted-foreground: hsl(25, 5.3%, 44.7%);
   --popover: hsl(0, 0%, 100%);
   --popover-foreground: hsl(20, 14.3%, 4.1%);
