--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,7 @@
   --background: hsl(271 41% 10%);
   --foreground: hsl(271 41% 10%);
   --muted: hsl(271 41% 10%);
-  --muted-foreground: hsl(25, 5.3%, 44.7%);
+  --muted-foreground: hsl(271 41% 10%);
   --popover: hsl(271 41% 10%);
   --popover-foreground: hsl(271 41% 10%);
   --card: hsl(271 41% 10%);
