--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,7 +9,7 @@
   --muted-foreground: #7C7368; /* hsl(25, 5.3%, 44.7%) */
   --popover: #4d2e6b; /* hsl(0, 0%, 100%) */
   --popover-foreground: #100C0A; /* hsl(20, 14.3%, 4.1%) */
-  --card: #1a0f24; /* hsl(0, 0%, 100%) */
+  --card: #4d2e6b; /* hsl(0, 0%, 100%) */
   --card-foreground: #100C0A; /* hsl(20, 14.3%, 4.1%) */
   --border: #E6E1DC; /* hsl(20, 5.9%, 90%) */
   --input: #E6E1DC; /* hsl(20, 5.9%, 90%) */
