--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --background: ##1a0f24; /* hsl(0, 0%, 100%) */
+  --background: #4d2e6b; /* hsl(0, 0%, 100%) */
   --foreground: #100C0A; /* hsl(20, 14.3%, 4.1%) */
   --muted: #F5F5F4; /* hsl(60, 4.8%, 95.9%) */
   --muted-foreground: #7C7368; /* hsl(25, 5.3%, 44.7%) */
