--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,11 +4,11 @@
 
 /* Light Mode (Default - you might not see this much if your app is primarily dark) */
 :root {
-  --background: #1a0f24; /* White */
+  --background: #FFFF; /* White */
   --foreground: #1a0f24; /* Very dark brown/black */
   --muted: #F5F5F4;      /* Light gray */
   --muted-foreground: #7C7368; /* Muted brown */
-  --popover: #FFFFFF;
+  --popover: #1a0f24;
   --popover-foreground: #100C0A;
   --card: #FFFFFF;
   --card-foreground: #100C0A;
